--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -10,3 +10,40 @@
   flex-direction: column;
   align-items: center;
 }
+
+.content {
+  width: 100%;
+  position: relative;
+
+  &__button {
+    position: absolute;
+    top: 1.5625rem; //25px;
+    left: 1rem; //16px;
+    border: none;
+    background-color: #ffffff;
+
+    & svg {
+      // fill: ;
+    }
+  }
+
+  &__input {
+    & input {
+      width: 100%;
+      height: 4.0625rem; //65px;
+      outline: none;
+      border: none;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+        0px 4px 4px rgba(0, 0, 0, 0.25);
+
+      &::placeholder {
+        color: rgba(0, 0, 0, 0.4);
+        font-weight: 300;
+        font-size: 1.5rem; //24px;
+        font-style: italic;
+        // padding: 18px 0 18px 61px;
+        padding: 1.125rem 0 1.125rem 3.8125rem;
+      }
+    }
+  }
+}
