toggle display of arrow based on todos length

--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -21,9 +21,10 @@
     left: 1rem; //16px;
     border: none;
     background-color: #ffffff;
+    display: none;
 
-    & svg {
-      // fill: ;
+    &--show {
+      display: inline-block;
     }
   }
 
