--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -5,6 +5,7 @@
   width: 100%;
   margin: 0 auto;
   padding-top: 3.8125rem; //61px;
+  padding-bottom: 3.8125rem; //61px;
 
   display: flex;
   flex-direction: column;
@@ -14,6 +15,7 @@
 .content {
   width: 100%;
   position: relative;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 
   &__button {
     position: absolute;
@@ -34,8 +36,9 @@
       height: 4.0625rem; //65px;
       outline: none;
       border: none;
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
-        0px 4px 4px rgba(0, 0, 0, 0.25);
+      // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
+      //   0px 4px 4px rgba(0, 0, 0, 0.25);
+
       font-size: 1.5rem; //24px;
       font-weight: 300;
 
@@ -47,5 +50,34 @@
         font-style: italic;
       }
     }
+  }
+
+  &__todos {
+    list-style-type: none;
+    font-size: 1.5rem; //24px;
+    font-weight: 300;
+  }
+
+  &__todo {
+    height: 4.0625rem; //65px;
+    // padding: 18px 0 18px 61px;
+    padding: 1.125rem 0 1.125rem 3.8125rem;
+    position: relative;
+    border-top: 1px solid #dfdfdf;
+    border-bottom: 1px solid #dfdfdf;
+    background-color: #ffffff;
+    filter: drop-shadow(0px -2px 1px rgba(0, 0, 0, 0.03));
+  }
+
+  &__checkbox {
+    position: absolute;
+    width: 29px;
+    height: 28px;
+    top: 19px;
+    left: 16px;
+
+    border: 2px solid #dfdfdf;
+    box-sizing: border-box;
+    border-radius: 2px;
   }
 }
