--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -67,17 +67,33 @@
     border-bottom: 1px solid #dfdfdf;
     background-color: #ffffff;
     filter: drop-shadow(0px -2px 1px rgba(0, 0, 0, 0.03));
+
+    &--done {
+      color: rgba(0, 0, 0, 0.35);
+      text-decoration-line: line-through;
+    }
   }
 
   &__checkbox {
     position: absolute;
-    width: 29px;
-    height: 28px;
-    top: 19px;
-    left: 16px;
+    width: 1.8125rem; // 29px;
+    height: 1.75rem; //28px;
+    top: 1.1875rem; //19px;
+    left: 1rem; //16px;
 
     border: 2px solid #dfdfdf;
     box-sizing: border-box;
     border-radius: 2px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &--done {
+      border: 2px solid #2cda00;
+    }
+  }
+
+  &__checkmark {
   }
 }
