added clear completed functionality

--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -176,7 +176,11 @@
 
   &__clearCompleted {
     border: none;
-
+    visibility: hidden;
     text-transform: capitalize;
+
+    &--show {
+      visibility: visible;
+    }
   }
 }
