--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -17,7 +17,7 @@
   position: relative;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25), 0px 4px 4px rgba(0, 0, 0, 0.25);
 
-  &__button {
+  &__arrow {
     position: absolute;
     top: 1.5625rem; //25px;
     left: 1rem; //16px;
@@ -76,8 +76,8 @@
 
   &__todo {
     height: 4.0625rem; //65px;
-    // padding: 18px 0 18px 61px;
-    padding: 1.125rem 0 1.125rem 3.8125rem;
+    // padding: 18px 32px 18px 61px;
+    padding: 1.125rem 2rem 1.125rem 3.8125rem;
     position: relative;
     border-top: 1px solid #dfdfdf;
     border-bottom: 1px solid #dfdfdf;
@@ -112,6 +112,16 @@
   }
 
   &__checkmark {
+  }
+
+  &__todoText {
+    // display: inline-block;
+
+    &:active,
+    &:focus {
+      width: 100%;
+      outline: 1px solid rgba(0, 0, 0, 0.4);
+    }
   }
 
   &__delete {
