--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -4,12 +4,17 @@
   max-width: 39.1875rem; // 627px;
   width: 100%;
   margin: 0 auto;
-  padding-top: 3.8125rem; //61px;
-  padding-bottom: 3.8125rem; //61px;
+  // padding-top: 3.8125rem; //61px;
+  // padding-bottom: 3.8125rem; //61px;
+  padding: 3.8125rem 0;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  @media only screen and (max-width: 475px) {
+    padding: 3.8125rem 0.5rem;
+  }
 }
 
 .content {
@@ -45,18 +50,18 @@
       height: 4.0625rem; //65px;
       outline: none;
       border: none;
-      // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
-      //   0px 4px 4px rgba(0, 0, 0, 0.25);
-
       font-size: 1.5rem; //24px;
       font-weight: 300;
-
       // padding: 18px 0 18px 61px;
       padding: 1.125rem 0 1.125rem 3.8125rem;
 
       &::placeholder {
         color: rgba(0, 0, 0, 0.4);
         font-style: italic;
+      }
+
+      @media only screen and (max-width: 475px) {
+        font-size: 1.25rem;
       }
     }
   }
@@ -72,6 +77,10 @@
       display: block;
       visibility: visible;
     }
+
+    @media only screen and (max-width: 475px) {
+      font-size: 1.25rem;
+    }
   }
 
   &__todo {
@@ -83,6 +92,8 @@
     border-bottom: 1px solid #dfdfdf;
     background-color: #ffffff;
     filter: drop-shadow(0px -2px 1px rgba(0, 0, 0, 0.03));
+    display: flex;
+    align-items: center;
 
     &--done {
       color: rgba(0, 0, 0, 0.35);
@@ -116,6 +127,7 @@
 
   &__todoText {
     // display: inline-block;
+    overflow-x: scroll;
 
     &:active,
     &:focus {
@@ -157,6 +169,19 @@
 
       cursor: pointer;
     }
+
+    @media only screen and (max-width: 475px) {
+      flex-direction: column;
+      padding: 1rem;
+      height: auto;
+      align-items: flex-start;
+
+      & > * {
+        &:not(:last-child) {
+          margin-bottom: 1rem;
+        }
+      }
+    }
   }
 
   &__itemCount {
@@ -170,6 +195,10 @@
       text-transform: capitalize;
       &:not(:last-child) {
         margin-right: 1.375rem; //22px;
+
+        @media only screen and (max-width: 475px) {
+          margin-right: 1rem;
+        }
       }
     }
   }
