--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -2,4 +2,8 @@
   color: #000;
   font-weight: 200;
   font-size: 6.25rem; //100px;
+
+  @media only screen and (max-width: 475px) {
+    font-size: 5rem;
+  }
 }
