--- a/src/app/containers/todos/styles.scss
+++ b/src/app/containers/todos/styles.scss
@@ -12,6 +12,10 @@
   flex-direction: column;
   align-items: center;
 
+  @media only screen and (max-width: 650px) {
+    padding: 3.8125rem 1rem;
+  }
+
   @media only screen and (max-width: 475px) {
     padding: 3.8125rem 0.5rem;
   }
